<resources>
    <string name="app_name">Myself App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Andreas Suryadi</string>
    <string name="nav_header_subtitle">andreas.suryadi02@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_daily_activity">Daily Activity</string>
    <string name="menu_friend_list">Friend List</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_music_video">Music &amp; Video</string>
    <string name="menu_profile">Profile</string>

    <string name="headerprofile">Header Profile</string>
    <string name="name">Andreas Suryadi</string>
    <string name="description">Saya adalah seorang programmer, karena saya suka untuk membangun sebuah website dan menggunakan logika</string>

    <string name="my_interest">My Interest</string>
    <string name="hobby">Hobby</string>
    <string name="gaming">Gaming</string>
    <string name="lovedclub">Loved Club</string>
    <string name="liverpool">Liverpool</string>
    <string name="interest">Interest</string>
    <string name="coding">Coding</string>
    <string name="goal">Goal</string>
    <string name="help_people">Help people that needs about coding</string>

    <string name="daily_activity">Daily Activity</string>
    <string name="friend_list">Friend List</string>
    <string name="gallery">Gallery</string>
    <string name="music_video">Music &amp; Video</string>

    <string name="version">Version: 1.0.0</string>

    <string name="page_one">Selamat Datang</string>
    <string name="page_one_description">Aplikasi ini dibuat untuk perkenalan diri</string>
    <string name="page_two">Kegiatan Sehari-hari</string>
    <string name="page_two_description">Berisi Tentang Kegiatan Sehari-hari</string>
    <string name="page_three">Mari Mulai</string>
    <string name="next">Lanjut</string>
    <string name="comingsoon">Coming Soon</string>
</resources>