<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_homepage"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_daily_activity"
            android:icon="@drawable/ic_daily_activity"
            android:title="@string/menu_daily_activity" />
        <item
            android:id="@+id/nav_friend_list"
            android:icon="@drawable/ic_friend_list"
            android:title="@string/menu_friend_list" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_music_video"
            android:icon="@drawable/ic_music_video"
            android:title="@string/menu_music_video" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_menu"
            android:title="@string/menu_profile" />
    </group>
</menu>