<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/ic_header_profile"
            android:contentDescription="@string/headerprofile">

        </ImageView>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="110dp"
            app:border_width="4dp"
            app:border_color="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="205dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/lightgreen"
                android:textSize="28sp"></TextView>

            <TextView
                android:layout_width="304dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/description"
                android:textColor="@color/fonttitle"
                android:textSize="14sp"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/my_interest"
                android:textColor="@color/lightgreen"
                android:textSize="28sp"></TextView>
        </LinearLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:columnCount="2"
            android:rowCount="2">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="390dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/search_donor"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_gaming" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/hobby"
                    android:textColor="@color/fonttitle"
                    android:textSize="20sp">

                </TextView>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/gaming"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="390dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/bloodneeded"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_liverpool" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/lovedclub"
                    android:textColor="@color/fonttitle"
                    android:textSize="20sp">

                </TextView>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/liverpool"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/message"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_computer" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/interest"
                    android:textColor="@color/fonttitle"
                    android:textSize="20sp">

                </TextView>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/coding"></TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/donorhistory"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_goal" />

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/goal"
                    android:textColor="@color/fonttitle"
                    android:textSize="20sp">

                </TextView>

                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/help_people">

                </TextView>
            </LinearLayout>
        </GridLayout>
    </RelativeLayout>
</ScrollView>