<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/ic_header_profile"
            android:contentDescription="@string/headerprofile">

        </ImageView>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="110dp"
            app:border_width="4dp"
            app:border_color="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="205dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/lightgreen"
                android:textSize="28sp"></TextView>

            <TextView
                android:id="@+id/profile_description"
                android:layout_width="304dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/description"
                android:textColor="@color/fonttitle"
                android:textSize="14sp"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp">
                <TextView
                    android:id="@+id/profileWhatsapp"
                    android:layout_width="30dp"
                    android:layout_height="35dp"
                    android:background="@drawable/ic_whatsapp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    app:layout_constraintTop_toBottomOf="@+id/line_3"
                    app:layout_constraintStart_toEndOf="@id/profile_description"
                    android:textSize="19sp"
                    android:layout_marginRight="25dp"
                    />

                <TextView
                    android:id="@+id/profileInstagram"
                    android:layout_width="30dp"
                    android:layout_height="35dp"
                    android:background="@drawable/ic_instagram"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    app:layout_constraintTop_toBottomOf="@+id/line_3"
                    app:layout_constraintStart_toEndOf="@id/profile_description"
                    android:textSize="19sp"
                    android:layout_marginRight="25dp"
                    />

                <TextView
                    android:id="@+id/profileEmail"
                    android:layout_width="30dp"
                    android:layout_height="35dp"
                    android:background="@drawable/ic_email"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    app:layout_constraintTop_toBottomOf="@+id/line_3"
                    app:layout_constraintStart_toEndOf="@id/profile_description"
                    android:textSize="19sp"
                    />
            </LinearLayout>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/map"
                android:layout_margin="20dp"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
                app:layout_constraintVertical_bias="0.299"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:gravity="center"
                android:textSize="14sp">

            </TextView>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>